Add html main structure

--- a/index.html
+++ b/index.html
@@ -7,11 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Gentle, Relaxing Yoga, Calm Minds, Release Tension, Office worker Yoga, Cope with the stresses of working">
     <meta name="keywords" content="Gentle, Relaxing Yoga, Calm Minds, Release Tension, Office worker Yoga, Cope with the stresses of working">
+   
     <link rel="stylesheet" href="assets/css/style.css">
+    
     <title>K.YOGA</title>
 </head>
 
 <body>
+    <header></header>
+
+    <section></section>
+    <section></section>
+    <section></section>
+    <section></section>
+
+    <footer></footer>
     
 </body>
 </html>
