--- a/index.html
+++ b/index.html
@@ -14,14 +14,36 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <a href="#home">
+            <h1>K.YOGA</h1>
+        </a>
 
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#home">Home</a>
+                </li>
+                <li>
+                    <a href="#about-me">About Me</a>
+                </li>
+                <li>
+                    <a href="#yin-yoga">Yin Yoga</a>
+                </li>
+                <li>
+                    <a href="#schedule">Schedule</a>
+                </li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <section id="home"></section>
+    <section id="about-me"></section>
+    <section id="yin-yoga"></section>
+    <section id="schedule"></section>
 
     <footer></footer>
-    
+
 </body>
 </html>
