add content and booking to home page

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     
     <title>K.YOGA</title>
+
 </head>
 
 <body>
@@ -38,7 +40,18 @@
 
     </header>
 
-    <section id="home"></section>
+    <section id="home">
+
+        <div class="message">
+            <p>Practicing gentle, relaxing yoga with K.YOGA to help you calm your mind and release tension in your body</p>
+        </div>
+
+        <div>
+            <a href="#schedule" aria-label="Book Yoga Class Here" class="sub-book-here">Book Here</a>
+        </div>
+
+    </section>
+
     <section id="about-me"></section>
     <section id="yin-yoga"></section>
     <section id="schedule"></section>
