add contents and booking to about me page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -42,17 +42,27 @@
 
     <section id="home">
 
-        <div class="message">
+        <div>
             <p>Practicing gentle, relaxing yoga with K.YOGA to help you calm your mind and release tension in your body</p>
         </div>
 
         <div>
-            <a href="#schedule" aria-label="Book Yoga Class Here" class="sub-book-here">Book Here</a>
+            <a href="#schedule" aria-label="Book Yoga Class Here">Book Here</a>
         </div>
 
     </section>
 
-    <section id="about-me"></section>
+    <section id="about-me">
+
+        <div>
+            <p>Hi, I’m Katie. I teach gentle, relaxing yoga to help people calm their minds and release tension in their bodies.</p>
+            <p>I have been practising yoga since I was a teenager and teaching it since 2020. Before becoming a yoga teacher I worked in various different office jobs. Working at a desk all day made my body feel very tense, especially my neck, shoulders, back and hips. Practising yoga helped release that tension. Yoga also helped calm my mind and helped me cope with the stresses of working in a busy, fast-paced environment.</p>
+            <p>I am currently building my yoga business and my target market is office workers. To test the market, I would like to offer one free class on zoom for office workers. Please check schedule for availability. It will be a yin yoga class. Yin yoga is a slow, gentle practice. It is all seated and lying down postures. It is very relaxing, great to do before bed!</p>
+        </div>
+
+        <a href="#schedule" aria-label="Book Yoga Class Here">Book Here</a>
+        
+    </section>
     <section id="yin-yoga"></section>
     <section id="schedule"></section>
 
