--- a/index.html
+++ b/index.html
@@ -160,7 +160,30 @@
         </form>
     </section>
 
-    <footer></footer>
+    <footer>
+        <ul class="social-networks">
+            <li>
+                <a href="https://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="https://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="https://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page"><i class="fab fa-instagram"></i></a>
+            </li>
+        </ul>
+        <div id="all-rights-reserved">
+            <p>© Design by CrankyCat Loves Coding</p>
+        </div>
+
+    </footer>
 
 </body>
 </html>
