--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Gentle, Relaxing Yoga, Calm Minds, Release Tension, Office worker Yoga, Cope with the stresses of working">
     <meta name="keywords" content="Gentle, Relaxing Yoga, Calm Minds, Release Tension, Office worker Yoga, Cope with the stresses of working">
    
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/style/style.css">
     
     <title>K.YOGA</title>
 
@@ -184,6 +184,9 @@
         </div>
 
     </footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/0b1aa04109.js" crossorigin="anonymous"></script>
 
 </body>
 </html>
