add scroll snap for the site

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <article class="scroller">
+    <div class="scroller">
         <section id="home">
 
             <header>
@@ -162,7 +162,7 @@
     
             </form>
         </section>
-    </article>
+    </div>
 
 
     <footer>
