--- a/index.html
+++ b/index.html
@@ -22,26 +22,30 @@
 
             <header>
 
-                <a href="#home">
-                    <h1>K.YOGA</h1>
-                </a>
-        
-                <nav>
-                    <ul id="nav-menu">
-                        <li>
-                            <a href="#home">Home</a>
-                        </li>
-                        <li>
-                            <a href="#about-me">About Me</a>
-                        </li>
-                        <li>
-                            <a href="#yin-yoga">Yin Yoga</a>
-                        </li>
-                        <li>
-                            <a href="#schedule">Schedule</a>
-                        </li>
-                    </ul>
-                </nav>
+                <div>
+                    <a href="#home">
+                        <h1>K.YOGA</h1>
+                    </a>
+                </div>
+
+                <div>
+                    <nav>
+                        <ul id="nav-menu">
+                            <li>
+                                <a href="#home">Home</a>
+                            </li>
+                            <li>
+                                <a href="#about-me">About Me</a>
+                            </li>
+                            <li>
+                                <a href="#yin-yoga">Yin Yoga</a>
+                            </li>
+                            <li>
+                                <a href="#schedule">Schedule</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
         
             </header>
 
