--- a/index.html
+++ b/index.html
@@ -165,34 +165,36 @@
                 </div>
     
             </form>
+
+            <footer class="footer">
+                <div>
+                    <ul class="social-networks">
+                        <li>
+                            <a href="https://facebook.com" target="_blank" rel="noopener"
+                                aria-label="Visit Facebook page"><i class="fab fa-facebook"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://twitter.com" target="_blank" rel="noopener"
+                                aria-label="Visit Twitter page"><i class="fab fa-twitter"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://youtube.com" target="_blank" rel="noopener"
+                                aria-label="Visit YouTube page"><i class="fab fa-youtube"></i></a>
+                        </li>
+                        <li>
+                            <a href="https://instagram.com" target="_blank" rel="noopener"
+                                aria-label="Visit Instagram page"><i class="fab fa-instagram"></i></a>
+                        </li>
+                    </ul>
+                </div>
+               
+                <div id="design-by">
+                    <p>© Design by CrankyCat Loves Coding</p>
+                </div>
+            </footer>
+
         </section>
     </div>
-
-
-    <footer>
-        <ul class="social-networks">
-            <li>
-                <a href="https://facebook.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Facebook page"><i class="fab fa-facebook"></i></a>
-            </li>
-            <li>
-                <a href="https://twitter.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Twitter page"><i class="fab fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="https://youtube.com" target="_blank" rel="noopener"
-                    aria-label="Visit our YouTube page"><i class="fab fa-youtube"></i></a>
-            </li>
-            <li>
-                <a href="https://instagram.com" target="_blank" rel="noopener"
-                    aria-label="Visit our Instagram page"><i class="fab fa-instagram"></i></a>
-            </li>
-        </ul>
-        <div id="all-rights-reserved">
-            <p>© Design by CrankyCat Loves Coding</p>
-        </div>
-
-    </footer>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0b1aa04109.js" crossorigin="anonymous"></script>
