adjust style for h2 in schedule page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
             <header>
 
-                <div>
+                <div id="logo">
                     <a href="#home">
                         <h1>K.YOGA</h1>
                     </a>
