adjust media query for max 768px

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 </div>
                
                 <div id="design-by">
-                    <p>© Design by CrankyCat Loves Coding</p>
+                    <p>© Design by CCLC for educational purposes</p>
                 </div>
             </footer>
 
