add mian menu icon and style it

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <div class="scroller">
+    <main class="scroller">
         <section id="home">
 
             <header>
@@ -26,10 +26,18 @@
                     <a href="#home">
                         <h1>K.YOGA</h1>
                     </a>
+
+                    <label for="main-menu" class="check-button">
+                        <i class="fas fa-bars"></i>
+                    </label>
+                    <input type="checkbox" name="main-menu" id="main-menu" value="main-menu">
+                    
                 </div>
 
                 <div id="nav-menu">
                     <nav>
+
+
                         <ul>
                             <li>
                                 <a href="#home">Home</a>
@@ -236,7 +244,7 @@
             </footer>
 
         </section>
-    </div>
+    </main>
 
     <!-- font awesome script -->
     <script src="https://kit.fontawesome.com/0b1aa04109.js" crossorigin="anonymous"></script>
