--- a/index.html
+++ b/index.html
@@ -27,18 +27,16 @@
                         <h1>K.YOGA</h1>
                     </a>
 
-                    <label for="main-menu" class="check-button">
+                    <label for="check" class="check-button">
                         <i class="fas fa-bars"></i>
                     </label>
-                    <input type="checkbox" name="main-menu" id="main-menu" value="main-menu">
                     
                 </div>
 
                 <div id="nav-menu">
+                    <input type="checkbox" class="toggle">
                     <nav>
-
-
-                        <ul>
+                        <ul class="menu-list">
                             <li>
                                 <a href="#home">Home</a>
                             </li>
