restyle booking btn

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <h1>K.YOGA</h1>
                     </a>
 
-                    <label for="check" class="check-button">
+                    <label for="check">
                         <i class="fas fa-bars"></i>
                     </label>
                     
@@ -97,7 +97,7 @@
 
                 </div>
 
-                <div>
+                <div class="booking">
                     <a href="#schedule" aria-label="Book Yoga Class Here">Book Here</a>
                 </div>
 
