add hover to footer

--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
                     </ul>
                 </div>
                
-                <div id="design-by">
-                    <p>© Design by CCLC for educational purposes</p>
+                <div class="design-by">
+                    <a href="https://github.com/CrankyCat-Loves-Coding" target="_blank" aria-label="Visit CCLC github page">© Design by CCLC for educational purposes</a>
                 </div>
             </footer>
 
