add social link sidebar for small screen

--- a/index.html
+++ b/index.html
@@ -211,20 +211,20 @@
                 <div class="social-networks">
                     <ul>
                         <li>
-                            <a href="https://facebook.com" target="_blank" rel="noopener"
-                                aria-label="Visit Facebook page"><i class="fab fa-facebook"></i></a>
+                            <a href="https://facebook.com" target="_blank" rel="noopener" id="facebook"
+                                aria-label="Visit Facebook page"><span>Facebook</span><i class="fab fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="https://twitter.com" target="_blank" rel="noopener"
-                                aria-label="Visit Twitter page"><i class="fab fa-twitter"></i></a>
+                            <a href="https://twitter.com" target="_blank" rel="noopener" id="twitter"
+                                aria-label="Visit Twitter page"><span>Twitter</span><i class="fab fa-twitter"></i></a>
                         </li>
                         <li>
-                            <a href="https://youtube.com" target="_blank" rel="noopener"
-                                aria-label="Visit YouTube page"><i class="fab fa-youtube"></i></a>
+                            <a href="https://youtube.com" target="_blank" rel="noopener" id="youtube"
+                                aria-label="Visit YouTube page"><span>YouTube</span><i class="fab fa-youtube"></i></a>
                         </li>
                         <li>
-                            <a href="https://instagram.com" target="_blank" rel="noopener"
-                                aria-label="Visit Instagram page"><i class="fab fa-instagram"></i></a>
+                            <a href="https://instagram.com" target="_blank" rel="noopener" id="instagram"
+                                aria-label="Visit Instagram page"><span>Instagram</span><i class="fab fa-instagram"></i></a>
                         </li>
                     </ul>
                 </div>
