--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                     </a>
                     <nav class="my-sidebar-nav">
                         <ul>
-                            <li><a href="#home-section" id="home"><i class="fas fa-home"></i>Home</a></li>
-                            <li><a href="#about-me-section" id="about-me"><i class="far fa-user-circle"></i>About Me</a></li>
-                            <li><a href="#yin-yoga-section" id="yin-yoga"><i class="fas fa-spa"></i>Yin Yoga</a></li>
-                            <li><a href="#schedule-section" id="schedule"><i class="far fa-calendar-alt"></i>Schedule</a></li>
+                            <li><a href="#home-section" id="home"><i class="fas fa-home"></i><span>Home</span></a></li>
+                            <li><a href="#about-me-section" id="about-me"><i class="far fa-user-circle"></i><span>About</span> Me</a></li>
+                            <li><a href="#yin-yoga-section" id="yin-yoga"><i class="fas fa-spa"></i><span>Yin Yoga</span></a></li>
+                            <li><a href="#schedule-section" id="schedule"><i class="far fa-calendar-alt"></i><span>Schedule</span></a></li>
                         </ul>
                     </nav>
 
